--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,29 @@
 /* 1. don't modify this style */
+
+@font-face {
+  font-family: 'Poppins-Black';
+  src: url("../assets/fonts/Poppins/Poppins-Black.ttf");
+}
+@font-face {
+  font-family: 'Poppins-Light';
+  src: url("../assets/fonts/Poppins/Poppins-Light.ttf");
+}
 * {
   padding: 0;
   margin: 0;
-
+  background-color: var(--blueGradiant);
   box-sizing: border-box;
 }
+.clearfix::after {
+  content: '';
+  clear: both;
+  display: table;
+ }
 
 /* 2. we use :root for default variables */
 :root {
+  --blueGradiant: #3B2A9F;
+  --secondary: #FA8305;
   /* --"somekey-attr": "somevalue" i.e : */
   --black-700: #000;
 }
@@ -17,4 +33,378 @@
   background-color: var(--black-700);
 }
 
-/* good luck */
+.main-all{
+  width: 1440px;
+}
+
+.main-top{
+  margin-top: 114px;
+  margin-left: 110px;
+  color: #ffffff;
+  font-family: 'poppins-Light';
+  
+ 
+}
+
+.main-top .lorem-first{
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 54px;
+  padding-top: 38px;
+   
+}
+
+.main-top .lorem-secound{
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 31px;
+  margin-top: 25px;
+  margin-bottom: 57px;
+  
+}
+.main-top .home_game{
+ 
+  font-family: 'poppins-Light';
+  font-size: 12px;
+  line-height: 25px;
+
+}
+
+
+.home_game .home{
+  color: #ffffff;
+}
+.home_game .games{
+  color: #FA8305;
+}
+
+.main-top button{
+  background-color: #FA8305;
+  font-size: 16px;
+  padding: 10px 57px 13px 19px;
+  width: 176px;
+  height: 47px;
+  border-radius: 40px;
+  color: #ffffff;
+  border-color: #FA8305;
+}
+ 
+
+.get-in-touch i {
+  float: right;
+}
+
+.img-text{
+  overflow: auto;
+}
+
+.lorem-secound img{
+  width: 700px;
+  height: 656px;
+  background-color: #979797;
+  float: right;
+  margin-top: -380px;
+  
+}
+ 
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  margin-top: 350px;
+  margin-left: 110px;
+   
+}
+.card {
+  flex: 0 0 378px;
+  margin: 10px;
+  background-color: var(--black-700);
+  height: 348px;
+  border-radius: 20px;
+  margin-top: -270px;
+} 
+ 
+.card .text {
+  padding: 0 20px 20px;
+  background-color: var(--black-700);
+  color: #ffffff;
+  margin-top: 64px;
+  padding-left: 37px;
+  padding-right: 37px;
+  max-width: 350px;
+}
+
+.card .text .card-h-1{
+  width: 140px;
+  height: 39px;
+  background-color: #B000DC1C;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400px;
+  padding-top: 7px;
+  border-radius: 8px;
+  margin-bottom: 19px;
+  line-height: 26px;
+}
+
+.card .text .card-h-2{
+  width: 140px;
+  height: 39px;
+  background-color: #DC42001C;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400px;
+  padding-top: 7px;
+  border-radius: 8px;
+  margin-bottom: 19px;
+  line-height: 26px;
+}
+
+.card .text .card-h-3{
+  width: 140px;
+  height: 39px;
+  background-color: #00DC8D1C;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400px;
+  padding-top: 7px;
+  border-radius: 8px;
+  margin-bottom: 19px;
+  line-height: 26px;
+}
+
+.card .text h3{
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 37px;
+  margin-bottom: 16px;
+  background-color: var(--black-700);
+}
+
+.card .text p{
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 16px;
+  max-width: 304px;
+  height: 108px;
+  background-color: var(--black-700);
+  padding-bottom: 64px;
+}
+
+.center-section{
+  display: flex;
+  /* flex-wrap: wrap; */
+  /* align-items: flex-end; */
+  width: 1440px;
+  height: 603px;
+  background-color: #1C140F;
+  margin-top: 147px;
+  
+}
+
+.center-section .img-center{
+  width: 496px;
+  height: 490px;
+  margin-left: 110px;
+  background-color: #1C140F;
+}
+
+.center-section .img-center img{
+  
+  width: 100%;
+  height: 100%;
+  margin-top: 113px;
+  border-radius: 24px 24px 0px 0px;
+  
+}
+
+.center-section .text-center{
+  max-width: 536px;
+  height: 323px;
+  float: right;
+  margin-left: 95px;
+  background-color: #1C140F; 
+  margin-top: 134px;
+}
+
+.center-section .text-center h4{
+  background-color: #1C140F;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 32px;
+  margin-bottom: 14px;
+}
+
+.center-section .text-center .center-p-1{
+  font-size: 28px;
+  font-weight: 600px;
+  line-height: 44px;
+  max-width: 400px;
+  max-height: 150px;
+  color: #ffffff;
+  background-color: #1C140F;
+}
+.center-section .text-center .center-p-2{
+  font-size: 15px;
+  font-weight: 400px;
+  line-height: 32px;
+  max-width: 400px;
+  margin-top: 14px;
+  color: #ffffff;
+  background-color: #1C140F;
+}
+
+.our-team{
+  margin-top: 148px;
+  margin-left: 110px;
+  color:#ffffff ;
+}
+
+.team {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  margin-left: 110px;
+  margin-top: 53px;
+}
+.person {
+  flex: 0 0 240px;
+  border-radius: 20px;
+  margin-right: 28px;
+  background-color: var(--black-700);
+  height: 253px;
+  
+} 
+.person img {
+  max-width: 100%;
+  background-color: var(--black-700);
+  margin: auto;
+  display: block;
+  margin-top: 35px;
+}
+.person .text {
+  padding: 0 20px 20px;
+  text-align: center;
+  background-color: var(--black-700);
+  color: #ffffff;
+}
+
+.person .text h3 , h4{
+  background-color: var(--black-700);
+}
+
+.person .text h3{
+  font-size: 19px;
+  font-weight: 600;
+  line-height: 38px;
+}
+
+.person .text h3{
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 32px;
+}
+
+.stay-in-top{
+  margin-left: 135px;
+  margin-top: 157px;
+  color: #ffffff;
+}
+ 
+.stay-in-top h3{
+  font-size: 30px;
+  font-weight: 600px;
+  line-height: 56px;
+}
+
+.stay-in-top p{
+  font-size: 16px;
+  font-weight: 400px;
+  line-height: 30px;
+  max-width:440px ;
+}
+
+.stay-in-the-loop{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  margin-top: 74px;
+  background-color: var(--black-700);
+  margin-left: 135px;
+  width: 1170px;
+  height: 189px;
+  border-radius: 15px;
+  color: #ffffff;
+}
+
+.stay{
+  flex: 0 0 240px;
+  border-radius: 20px;
+  background-color: var(--black-700);
+  margin-top: 40px;
+
+}
+
+.stay-in-the-loop .stay .stay-text {
+  color: #ffffff;
+  padding-left: 56px;
+  padding-top: 30px;
+  background-color: var(--black-700);
+  width: 636px;
+  margin-bottom: 60px;
+}
+.stay-in-the-loop .stay .stay-text h3 {
+  width: 303px;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 45px;
+  padding-top: -50px;
+  background-color: var(--black-700);
+}
+.stay-in-the-loop .stay .stay-text h4{
+  width:430px;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 25px;
+  background-color: var(--black-700);
+}
+.stay-in-the-loop .stay .stay-input{
+  background-color: #ffffff;
+  width: 385px;
+  border-radius: 8px;
+  margin-bottom: 80px;
+}
+
+.stay-in-the-loop .stay .stay-input button{
+  background-color: #FA8305;
+  color:#ffffff ;
+  font-size: 13;
+  font-weight: 400;
+  text-align: center;
+  width: 105px;
+  height: 37px;
+  border-radius: 8px;
+ 
+}
+
+.stay-in-the-loop .stay .stay-input input {
+  padding-left: 56px;
+  padding-top: 30px;
+  background-color: #ffffff;
+  height: 45px;
+  color: #898989;
+  padding: 14px 21px 14px 20px;
+}
+
+.title-cards{
+  margin-top: 280px;
+  color: #ffffff;
+  margin-left: 110px;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 45px;
+}
+
+ 
